# TumorParallelization

./: .gitignore  .gitmodules  README.md  benchmarks.py  compile_cuda_kernels.bat  compile_cuda_kernels.sh  config.py  make_executable.bat  make_executable.sh  octTree.py  octTreeCPU.py  octTreeGPU.py  octTree_test.py  postProcessing.py  postProcessingGPU.py  program.py  randomWalk.py  randomWalkGPU.py  requirements.txt  scene.py  sceneGenerator.py  setup.py  test_octree.py  test_util.py  tests.py  util.py
config/: config.json
cuda_kernels/: .gitignore  CMakeLists.txt  cuda_kernels.cp311-win_amd64.pyd  kernel_loader.py  vector_add.cu
cuda_kernels/src/: clear_tree.cu  gpu_octtree.cuh  gpu_sim.cu  gpu_sim.cuh  test.cpp
scenes/: empty_scene.json  sphere.json  test_scene.json
tests/: octTree_test.py  pybind_test.py  utils.py
tests/util/: agreements_util.py
